@@ -63,6 +63,25 @@ elgg.subsite_manager.init = function() {
 
 		event.preventDefault();
 	});
+
+	$(".elgg-menu-annotation .elgg-menu-item-decline a").live("click", function() {
+		var rel = $(this).attr("rel");
+		var result = false;
+		
+		if (rel.length > 0) {
+			var msg = prompt(rel);
+
+			if (msg != null) {
+				result = true;
+				var href = $(this).attr("href");
+
+				href = href + "&msg=" + encodeURIComponent(msg);
+				$(this).attr("href", href);
+			}
+		}
+
+		return result;
+	});
 }
 
 elgg.register_hook_handler('init', 'system', elgg.subsite_manager.init);
