@@ -4,7 +4,8 @@ x.x:
 
 - added: support for user support staff members
 - added: support for plugin manager
-- added: notification when a site administrator removes a user from the site 
+- added: notification when a site administrator removes a user from the site
+- added: personal message when declining membership request 
 - fixed: saving SAML attributes on login
 - fixed: too many notifications while importing users
 
